[package]
name = "wasi_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11"}
rust-crypto = "0.2.36"
evpkdf = "0.1.1"
md-5 = "0.9"
base64 = "0.13" # base64 编码/解码
once_cell = "1.10.0"


