[package]
name = "wasi_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
worker = "0.0.11"
rust-crypto-wasm = "0.3.1"
evpkdf = "0.1.1"
md-5 = "0.9"
base64 = "0.13" # base64 编码/解码
once_cell = "1.10.0"
prost = "0.10"
anyhow = "1.0.63"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 'z'
lto = true
[lib]
crate-type = ["cdylib", "rlib"]

[toolchain]
channel = "nightly"



